--- a/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
+++ b/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
@@ -5,18 +5,7 @@
         <button mat-icon-button>
           <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
         </button>
-        <form class="example-form">
-            <mat-form-field class="example-full-width" [floatLabel]="floatLabelType">
-              <input matInput placeholder="State" aria-label="State" name="search" [formControl]="search">
-              <!-- <mat-autocomplete #auto="matAutocomplete">
-                <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
-                  <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
-                  <span>{{state.name}}</span> |
-                  <small>Population: {{state.population}}</small>
-                </mat-option>
-              </mat-autocomplete> -->
-            </mat-form-field>
-          </form>
+        <span>Lisa</span>
       </mat-toolbar-row>
     </mat-toolbar>
   </div>
@@ -29,7 +18,6 @@
         <a mat-list-item [routerLink]="'/create-contact'"> <mat-icon class="toolbar__list__icon">file_copy</mat-icon>Minhas NF's</a>
         <a mat-list-item [routerLink]="'/activities'"> <mat-icon class="toolbar__list__icon">lock</mat-icon>Alterar Senha</a>
         <a mat-list-item [routerLink]="'/create-activity'"> <mat-icon class="toolbar__list__icon">exit_to_app</mat-icon>Sair</a>
-        <!-- <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a> -->
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content><div style="height: 88vh;">
