--- a/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
+++ b/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
@@ -1,27 +1,41 @@
 <div class="container">
   <div class="toolbar">
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <button mat-icon-button>
-          <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
-        </button>
-        <span>Lisa</span>
-      </mat-toolbar-row>
-    </mat-toolbar>
+    <mat-sidenav-container>
+      <mat-sidenav #sidenav class="sidenav">
+        <mat-nav-list>
+          <a mat-list-item [routerLink]="'/accounts'">
+            <mat-icon class="toolbar__list__icon">account_circle</mat-icon>Meu
+            Perfil</a
+          >
+          <a mat-list-item [routerLink]="'/create-account'">
+            <mat-icon class="toolbar__list__icon">search</mat-icon>Consultar
+            produtos</a
+          >
+          <a mat-list-item [routerLink]="'/contacts'">
+            <mat-icon class="toolbar__list__icon">book</mat-icon>Receitas</a
+          >
+          <a mat-list-item [routerLink]="'/create-contact'">
+            <mat-icon class="toolbar__list__icon">file_copy</mat-icon>Minhas
+            NF's</a
+          >
+          <a mat-list-item [routerLink]="'/activities'">
+            <mat-icon class="toolbar__list__icon">lock</mat-icon>Alterar
+            Senha</a
+          >
+          <a mat-list-item [routerLink]="'/create-activity'">
+            <mat-icon class="toolbar__list__icon">exit_to_app</mat-icon>Sair</a
+          >
+        </mat-nav-list>
+      </mat-sidenav>
+      <mat-toolbar color="primary">
+        <mat-toolbar-row>
+          <button mat-icon-button>
+            <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+          </button>
+          <span>Lisa</span>
+        </mat-toolbar-row>
+      </mat-toolbar>
+      <ng-content></ng-content>
+    </mat-sidenav-container>
   </div>
-  <mat-sidenav-container>
-    <mat-sidenav #sidenav>
-      <mat-nav-list>
-        <a mat-list-item [routerLink]="'/accounts'"> <mat-icon class="toolbar__list__icon">account_circle</mat-icon>Meu Perfil</a>
-        <a mat-list-item [routerLink]="'/create-account'"> <mat-icon class="toolbar__list__icon">search</mat-icon>Consultar produtos</a>
-        <a mat-list-item [routerLink]="'/contacts'"> <mat-icon class="toolbar__list__icon">book</mat-icon>Receitas</a>
-        <a mat-list-item [routerLink]="'/create-contact'"> <mat-icon class="toolbar__list__icon">file_copy</mat-icon>Minhas NF's</a>
-        <a mat-list-item [routerLink]="'/activities'"> <mat-icon class="toolbar__list__icon">lock</mat-icon>Alterar Senha</a>
-        <a mat-list-item [routerLink]="'/create-activity'"> <mat-icon class="toolbar__list__icon">exit_to_app</mat-icon>Sair</a>
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content><div style="height: 88vh;">
-      <router-outlet></router-outlet>
-    </div></mat-sidenav-content>
-  </mat-sidenav-container>
 </div>
