--- a/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
+++ b/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
@@ -35,7 +35,8 @@
           <span>Lisa</span>
         </mat-toolbar-row>
       </mat-toolbar>
-      <ng-content></ng-content>
+      <!-- <ng-content></ng-content> -->
+      <router-outlet></router-outlet>
     </mat-sidenav-container>
   </div>
 </div>
