--- a/libs/shared/home/ui/src/lib/shared-home-ui.component.html
+++ b/libs/shared/home/ui/src/lib/shared-home-ui.component.html
@@ -1,15 +1,16 @@
 <div class="home">
-  <lisa-shared-ui-toolbar-component [title]="toolbarTitle">
-    <div class="home__container">
-      <div class="home__nearby">
-        <lisa-shared-ui-thumbnail-carrousel-component
-          [markets]="markets"
-          (nearbyMarketActionClick)="nearbyMarketClick.emit($event)"
-        ></lisa-shared-ui-thumbnail-carrousel-component>
-      </div>
-      <div class="home__market-grid">
-        <lisa-shared-ui-market-grid-component></lisa-shared-ui-market-grid-component>
-      </div>
+  <div class="home__container">
+    <div class="home__search">
+      <lisa-shared-ui-search-component></lisa-shared-ui-search-component>
     </div>
-  </lisa-shared-ui-toolbar-component>
+    <div class="home__nearby">
+      <lisa-shared-ui-thumbnail-carrousel-component
+        [markets]="markets"
+        (nearbyMarketActionClick)="nearbyMarketClick.emit($event)"
+      ></lisa-shared-ui-thumbnail-carrousel-component>
+    </div>
+    <div class="home__market-grid">
+      <lisa-shared-ui-market-grid-component></lisa-shared-ui-market-grid-component>
+    </div>
+  </div>
 </div>
