--- a/libs/shared/ui/market-grid/src/lib/shared-ui-market-grid.component.html
+++ b/libs/shared/ui/market-grid/src/lib/shared-ui-market-grid.component.html
@@ -1,5 +1,51 @@
-<mat-grid-list cols="2" rowHeight="2:1">
-    <mat-grid-tile>rola</mat-grid-tile>
-    <mat-grid-tile>otra rola</mat-grid-tile>
-    <mat-grid-tile>tomeli rola</mat-grid-tile>
-</mat-grid-list>
+<!-- <mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile>
+    <mat-card>
+      <img mat-card-image src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png" alt="">
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list> -->
+<div class="market-grid">
+  <mat-card class="market-grid__item">
+    <img class="market-grid__item__img"
+      mat-card-image
+      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      alt=""
+    />
+  </mat-card>
+  <mat-card class="market-grid__item">
+    <img class="market-grid__item__img"
+      mat-card-image
+      src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+      alt=""
+    />
+  </mat-card>
+  <mat-card class="market-grid__item">
+      <img class="market-grid__item__img"
+        mat-card-image
+        src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+        alt=""
+      />
+    </mat-card>
+    <mat-card class="market-grid__item">
+      <img class="market-grid__item__img"
+        mat-card-image
+        src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+        alt=""
+      />
+    </mat-card>
+    <mat-card class="market-grid__item">
+        <img class="market-grid__item__img"
+          mat-card-image
+          src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+          alt=""
+        />
+      </mat-card>
+      <mat-card class="market-grid__item">
+        <img class="market-grid__item__img"
+          mat-card-image
+          src="https://upload.wikimedia.org/wikipedia/pt/d/dd/Logomarca_do_P%C3%A3o_de_A%C3%A7%C3%BAcar_%28supermercado%29.png"
+          alt=""
+        />
+      </mat-card>
+</div>
