--- a/libs/shared/ui/thumbnail-carroussel/src/lib/shared-ui-thumbnail-carroussel.component.html
+++ b/libs/shared/ui/thumbnail-carroussel/src/lib/shared-ui-thumbnail-carroussel.component.html
@@ -9,8 +9,8 @@
             [src]="market.imgUrl"
           />
         </div>
-        <div class="thumbnail-carroussel__label mat-caption">
-          {{ market.label }}
+        <div class="thumbnail-carroussel__name mat-caption">
+          {{ market.name }}
         </div>
       </mat-list-item>
     </div>
