--- a/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
+++ b/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
@@ -3,26 +3,26 @@
     <mat-sidenav-container>
       <mat-sidenav #sidenav class="sidenav">
         <mat-nav-list>
-          <a mat-list-item [routerLink]="'/accounts'">
+          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/profile')">
             <mat-icon class="toolbar__list__icon">account_circle</mat-icon>Meu
             Perfil</a
           >
-          <a mat-list-item [routerLink]="'/create-account'">
+          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/products')">
             <mat-icon class="toolbar__list__icon">search</mat-icon>Consultar
             produtos</a
           >
-          <a mat-list-item [routerLink]="'/contacts'">
+          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/recipe')">
             <mat-icon class="toolbar__list__icon">book</mat-icon>Receitas</a
           >
-          <a mat-list-item [routerLink]="'/create-contact'">
+          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/invoices')">
             <mat-icon class="toolbar__list__icon">file_copy</mat-icon>Minhas
             NF's</a
           >
-          <a mat-list-item [routerLink]="'/activities'">
+          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/change-password')">
             <mat-icon class="toolbar__list__icon">lock</mat-icon>Alterar
             Senha</a
           >
-          <a mat-list-item [routerLink]="'/create-activity'">
+          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/logout')">
             <mat-icon class="toolbar__list__icon">exit_to_app</mat-icon>Sair</a
           >
         </mat-nav-list>
@@ -35,7 +35,6 @@
           <span>Lisa</span>
         </mat-toolbar-row>
       </mat-toolbar>
-      <!-- <ng-content></ng-content> -->
       <router-outlet></router-outlet>
     </mat-sidenav-container>
   </div>
