--- a/libs/shared/chat/ui/src/lib/shared-chat-ui.component.scss
+++ b/libs/shared/chat/ui/src/lib/shared-chat-ui.component.scss
@@ -5,8 +5,29 @@
   justify-content: space-between;
   background-color: #fafafa;
 }
-.carousel-slide-content{
-    position: unset;
+.card-image{
+  width: calc(50% + 32px) !important;
+}
+.card-content{
+  text-align: center;
+}
+.mat-card-actions{
+  display: flex;
+  justify-content: center;
+}
+.card-image-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 16px;
+}
+.mat-card-header{
+  display: flex;
+  justify-content: center;
+}
+.card-title{
+  text-align: center;
 }
 .footer {
   display: flex;
@@ -23,7 +44,7 @@
     height: 75px;
     .text_input {
       width: 85%;
-      
+
     }
     .input__icon {
       margin-left: 18px;
@@ -84,11 +105,12 @@
 
 .messages .message .text_wrapper {
   display: inline-block;
-  padding: 12px;
+  padding: 8px 12px;
   border-radius: 6px;
-  width: calc(100% - 85px);
+  max-width: 90%;
   min-width: 100px;
   position: relative;
+  box-sizing: border-box;
 }
 
 .messages .message .text_wrapper::after,
@@ -134,4 +156,184 @@ input {
   width: 100%;
   border-radius: 10px;
   text-transform: uppercase;
+}
+
+.bannerStyle div {
+  background-color: #ccc;
+  background-size: cover !important;
+  height: 100%;
+}
+
+.bannerStyle img {
+  width: 100%;
+  height: 100%;
+}
+
+.bannerStyle h1 {
+  text-align: center;
+  background: rgba(0, 0, 0, 0.32);
+  color: white;
+  margin: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tile {
+  min-height: 200px;
+  background-color: #ccc;
+  background-size: cover !important;
+}
+
+.tile h1 {
+  text-align: center;
+  line-height: 200px;
+  background: rgba(0, 0, 0, 0.32);
+  color: white;
+  margin: 0;
+}
+
+h4 {
+  margin: 0;
+  padding: 10px 15px;
+  text-align: center;
+}
+
+.wBg {
+  background: white;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+nav {
+  border-bottom: 1px solid #ccc;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background: white;
+  z-index: 12;
+}
+
+nav h1 {
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+}
+
+.carBtn {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
+  border-radius: 999px;
+}
+
+.leftRs {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
+  border-radius: 999px;
+  left: 0;
+}
+
+.rightRs {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
+  border-radius: 999px;
+  right: 0;
+}
+
+.leftRs1 {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
+  border-radius: 999px;
+  right: 0;
+}
+
+.rightRs1 {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
+  border-radius: 999px;
+  left: 0;
+}
+
+.myPoint {
+  list-style-type: none;
+  text-align: center;
+  padding: 12px;
+  margin: 0;
+  white-space: nowrap;
+  overflow: auto;
+  box-sizing: border-box;
+}
+.myPoint  li {
+    display: inline-block;
+    border-radius: 50%;
+    border: 2px solid rgba(0, 0, 0, 0.55);
+    padding: 4px;
+    margin: 0 3px;
+    transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+    transition: 0.4s;
+}
+.myPoint  li.active {
+      background: #6b6b6b;
+      transform: scale(1.2);
+    }
+
+.carouselHoved {
+  opacity: 0.4;
+}
+
+.myBannerPoint {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  padding: 0;
+  color: beige;
+  justify-content: center;
+  list-style-type: none;
+  background: rgba(0, 0, 0, 0.34);
+  margin: 0;
+  padding: 10px;
+  box-sizing: border-box;
+}
+.myBannerPoint li {
+    background: #6b6b6b;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+.myBannerPoint li.active {
+      transform: translateY(-10px);
+      transition: .3s ease all;
 }
