--- a/libs/shared/chat/ui/src/lib/shared-chat-ui.component.html
+++ b/libs/shared/chat/ui/src/lib/shared-chat-ui.component.html
@@ -28,7 +28,7 @@
                       <img class="card-image" mat-card-image [src]="item.img" />
                     </div>
                     <mat-card-content>
-                      <p class='card-content'>
+                      <p class="card-content">
                         {{ item.descricao }}
                       </p>
                     </mat-card-content>
@@ -61,7 +61,7 @@
                 </button>
               </ngu-carousel>
             </div>
-            <p class="time">{{ chat.date | date: 'HH:mm:ss' }}</p>
+            <p class="time">{{ chat.date | date: 'dd/MM/yy HH:mm' }}</p>
           </div>
         </div>
       </li>
