--- a/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
+++ b/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
@@ -3,34 +3,57 @@
     <mat-sidenav-container>
       <mat-sidenav #sidenav class="sidenav">
         <mat-nav-list>
-          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/profile')">
+          <a
+            mat-list-item
+            (click)="sidenav.toggle(); navigateToAction.emit('/profile')"
+          >
             <mat-icon class="toolbar__list__icon">account_circle</mat-icon>Meu
             Perfil</a
           >
-          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/products')">
-            <mat-icon class="toolbar__list__icon">search</mat-icon>Consultar
-            produtos</a
+          <!-- <a
+            mat-list-item
+            (click)="sidenav.toggle(); navigateToAction.emit('/products')"
           >
-          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/recipe')">
+            <mat-icon class="toolbar__list__icon">search</mat-icon>Consultar
+            produtos
+          </a> -->
+          <a
+            mat-list-item
+            (click)="sidenav.toggle(); navigateToAction.emit('/chat')"
+          >
             <mat-icon class="toolbar__list__icon">book</mat-icon>Receitas</a
           >
-          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/invoices')">
+          <a
+            mat-list-item
+            (click)="sidenav.toggle(); navigateToAction.emit('/invoices')"
+          >
             <mat-icon class="toolbar__list__icon">file_copy</mat-icon>Minhas
             NF's</a
           >
-          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/change-password')">
+          <a
+            mat-list-item
+            (click)="
+              sidenav.toggle(); navigateToAction.emit('/change-password')
+            "
+          >
             <mat-icon class="toolbar__list__icon">lock</mat-icon>Alterar
             Senha</a
           >
-          <a mat-list-item (click)="sidenav.toggle();navigateToAction.emit('/logout')">
+          <a
+            mat-list-item
+            (click)="sidenav.toggle(); navigateToAction.emit('/logout')"
+          >
             <mat-icon class="toolbar__list__icon">exit_to_app</mat-icon>Sair</a
           >
         </mat-nav-list>
       </mat-sidenav>
       <mat-toolbar color="primary">
         <mat-toolbar-row>
-          <button mat-icon-button>
+          <button mat-icon-button *ngIf="actualRoute == '/'">
             <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+          </button>
+          <button mat-icon-button *ngIf="actualRoute != '/'">
+            <mat-icon (click)="navigateToAction.emit('/')">arrow_back</mat-icon>
           </button>
           <span>Lisa</span>
         </mat-toolbar-row>
