--- a/libs/shared/chat/ui/src/lib/shared-chat-ui.component.html
+++ b/libs/shared/chat/ui/src/lib/shared-chat-ui.component.html
@@ -61,7 +61,10 @@
                 </button>
               </ngu-carousel>
             </div>
-            <p class="time">{{ chat.date | date: 'dd/MM/yy HH:mm' }}</p>
+            <div class="time__action__container">
+              <p class="time">{{ chat.date | date: 'dd/MM/yy HH:mm' }}</p>
+              <button *ngIf="chat.type === 'BOT'" mat-icon-button (click)="speakMessageAction.emit(chat.message)"><mat-icon>hearing</mat-icon></button>
+            </div>
           </div>
         </div>
       </li>
