--- a/libs/shared/chat/ui/src/lib/shared-chat-ui.component.scss
+++ b/libs/shared/chat/ui/src/lib/shared-chat-ui.component.scss
@@ -1,3 +1,8 @@
+.time__action__container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .chat {
   height: calc(100vh - 56px);
   display: flex;
@@ -65,6 +70,10 @@
     overflow: hidden;
     margin-bottom: 20px;
     transition: all 0.5s linear;
+
+    .text{
+      font-size: 14px;
+    }
 
     &.left {
       .text_wrapper {
