--- a/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
+++ b/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.html
@@ -5,7 +5,7 @@
         <mat-nav-list>
           <a
             mat-list-item
-            (click)="sidenav.toggle(); navigateToAction.emit('/profile')"
+            (click)="sidenav.toggle(); navigateToAction.emit('/profile'); setTitleAction.emit('Meu perfil')"
           >
             <mat-icon class="toolbar__list__icon">account_circle</mat-icon>Meu
             Perfil</a
@@ -19,18 +19,18 @@
           </a> -->
           <a
             mat-list-item
-            (click)="sidenav.toggle(); navigateToAction.emit('/chat')"
+            (click)="sidenav.toggle(); navigateToAction.emit('/chat'); setTitleAction.emit('Chat Lisa')"
           >
             <mat-icon class="toolbar__list__icon">book</mat-icon>Receitas</a
           >
           <a
             mat-list-item
-            (click)="sidenav.toggle(); navigateToAction.emit('/invoices')"
+            (click)="sidenav.toggle(); navigateToAction.emit('/invoices'); setTitleAction.emit('Minhas Notas fiscais')"
           >
             <mat-icon class="toolbar__list__icon">file_copy</mat-icon>Minhas
             NF's</a
           >
-          <a
+          <!-- <a
             mat-list-item
             (click)="
               sidenav.toggle(); navigateToAction.emit('/change-password')
@@ -38,13 +38,13 @@
           >
             <mat-icon class="toolbar__list__icon">lock</mat-icon>Alterar
             Senha</a
-          >
-          <a
+          > -->
+          <!-- <a
             mat-list-item
             (click)="sidenav.toggle(); navigateToAction.emit('/logout')"
           >
             <mat-icon class="toolbar__list__icon">exit_to_app</mat-icon>Sair</a
-          >
+          > -->
         </mat-nav-list>
       </mat-sidenav>
       <mat-toolbar color="primary">
@@ -53,9 +53,9 @@
             <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
           </button>
           <button mat-icon-button *ngIf="actualRoute != '/'">
-            <mat-icon (click)="navigateToAction.emit('/')">arrow_back</mat-icon>
+            <mat-icon (click)="navigateToAction.emit('/'); setTitleAction.emit('Lisa')">arrow_back</mat-icon>
           </button>
-          <span>Lisa</span>
+          <span>{{ title }}</span>
         </mat-toolbar-row>
       </mat-toolbar>
       <router-outlet></router-outlet>
