--- a/libs/shared/chat/ui/src/lib/shared-chat-ui.component.scss
+++ b/libs/shared/chat/ui/src/lib/shared-chat-ui.component.scss
@@ -1,4 +1,4 @@
-.time__action__container{
+.time__action__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,29 +10,66 @@
   justify-content: space-between;
   background-color: #fafafa;
 }
-.card-image{
+.card-image {
   width: calc(50% + 32px) !important;
 }
-.card-content{
+.informacao-util {
+  &-header {
+    text-align: center;
+  }
+
+  &-actions {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    .liked {
+      color: green;
+    }
+
+    .unliked {
+      color: red;
+    }
+  }
+}
+.card-content {
   text-align: center;
 }
-.mat-card-actions{
+.mat-card-actions {
   display: flex;
   justify-content: center;
+  margin-bottom: 8px !important;
 }
-.card-image-container{
+.card-image-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 16px;
 }
-.mat-card-header{
+.mat-card-header {
   display: flex;
   justify-content: center;
+  &-text {
+    margin: 0px !important;
+  }
 }
-.card-title{
+.card-title {
   text-align: center;
+  margin-bottom: 16px !important;
+  &-discount {
+    font-size: 14px;
+    font-weight: 400;
+  }
+}
+.myPoint {
+  li {
+    border-color: blue !important;
+    &.active {
+      background: red !important;
+    }
+  }
 }
 .footer {
   display: flex;
@@ -49,7 +86,6 @@
     height: 75px;
     .text_input {
       width: 85%;
-
     }
     .input__icon {
       margin-left: 18px;
@@ -71,42 +107,31 @@
     margin-bottom: 20px;
     transition: all 0.5s linear;
 
-    .text{
+    .text {
       font-size: 14px;
     }
 
     &.left {
       .text_wrapper {
-        background-color: #ffe6cb;
-        margin-left: 20px;
+        background-color: #69b5ff;
+        margin-left: 8px;
 
         .text {
-          color: #c48843;
-        }
-
-        &::after,
-        ::before {
-          right: 100%;
-          border-right-color: #ffe6cb;
+          color: #fff;
         }
       }
     }
 
     &.right {
       .text {
-        color: #45829b;
+        color: #69b5ff;
         text-align: right;
       }
       .text_wrapper {
-        background-color: #c7eafc;
-        margin-right: 20px;
+        background-color: #fff;
+        margin-right: 8px;
         float: right;
-
-        &::after,
-        ::before {
-          left: 100%;
-          border-left-color: #c7eafc;
-        }
+        border: 1px solid#69b5ff;
       }
     }
   }
@@ -149,7 +174,7 @@
 
 .time {
   font-size: 10px;
-  color: black;
+  margin: 0;
 }
 
 input {
@@ -244,54 +269,6 @@ nav h1 {
   border-radius: 999px;
 }
 
-.leftRs {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  left: 0;
-}
-
-.rightRs {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  right: 0;
-}
-
-.leftRs1 {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  right: 0;
-}
-
-.rightRs1 {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  left: 0;
-}
-
 .myPoint {
   list-style-type: none;
   text-align: center;
@@ -301,19 +278,19 @@ nav h1 {
   overflow: auto;
   box-sizing: border-box;
 }
-.myPoint  li {
-    display: inline-block;
-    border-radius: 50%;
-    border: 2px solid rgba(0, 0, 0, 0.55);
-    padding: 4px;
-    margin: 0 3px;
-    transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
-    transition: 0.4s;
+.myPoint li {
+  display: inline-block;
+  border-radius: 50%;
+  border: 2px solid rgba(0, 0, 0, 0.55);
+  padding: 4px;
+  margin: 0 3px;
+  transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  transition: 0.4s;
 }
-.myPoint  li.active {
-      background: #6b6b6b;
-      transform: scale(1.2);
-    }
+.myPoint li.active {
+  background: #6b6b6b;
+  transform: scale(1.2);
+}
 
 .carouselHoved {
   opacity: 0.4;
@@ -337,12 +314,12 @@ nav h1 {
   box-sizing: border-box;
 }
 .myBannerPoint li {
-    background: #6b6b6b;
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
+  background: #6b6b6b;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
 }
 .myBannerPoint li.active {
-      transform: translateY(-10px);
-      transition: .3s ease all;
+  transform: translateY(-10px);
+  transition: 0.3s ease all;
 }
