feat(home): restyling

--- a/libs/shared/home/ui/src/lib/shared-home-ui.component.html
+++ b/libs/shared/home/ui/src/lib/shared-home-ui.component.html
@@ -12,5 +12,8 @@
     <div class="home__market-grid">
       <lisa-shared-ui-market-grid-component></lisa-shared-ui-market-grid-component>
     </div>
+    <div>
+      <lisa-shared-ui-day-offer-component></lisa-shared-ui-day-offer-component>
+    </div>
   </div>
 </div>
