--- a/libs/shared/ui/thumbnail-carroussel/src/lib/shared-ui-thumbnail-carroussel.component.html
+++ b/libs/shared/ui/thumbnail-carroussel/src/lib/shared-ui-thumbnail-carroussel.component.html
@@ -9,9 +9,9 @@
             [src]="market.imgUrl"
           />
         </div>
-        <div class="thumbnail-carroussel__name mat-caption">
+        <!-- <div class="thumbnail-carroussel__name mat-caption">
           {{ market.name }}
-        </div>
+        </div> -->
       </mat-list-item>
     </div>
   </mat-list>
