--- a/libs/shared/ui/thumbnail-carroussel/src/lib/shared-ui-thumbnail-carroussel.component.scss
+++ b/libs/shared/ui/thumbnail-carroussel/src/lib/shared-ui-thumbnail-carroussel.component.scss
@@ -1,4 +1,7 @@
 .thumbnail-carroussel {
+  .mat-list-base {
+    padding: 0;
+  }
   &__list {
     display: flex;
     flex-direction: row;
@@ -6,7 +9,7 @@
     overflow: auto;
 
     .mat-list-item {
-      height: 130px !important;
+      height: 90px !important;
       &-content {
         flex-direction: column !important;
       }
