--- a/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.scss
+++ b/libs/shared/ui/toolbar/src/lib/shared-ui-toolbar.component.scss
@@ -13,6 +13,11 @@
     }
   }
 }
+.footer-bar {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
 
 .sidenav {
   position: fixed;
